examples/test/testpolicy7926.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7926
  namespace: namespace185
spec:
  podSelector:
    matchLabels:
      key39: value1
      key34: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value27
      podSelector:
        matchLabels:
          key26: value7
          key45: value22
